--- a/app/index.html
+++ b/app/index.html
@@ -2,17 +2,17 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>vacdec</title>
+    <title>QR Decode</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/app.css">
   </head>
   <body>
     <div id="wrapper">
-      <h1>Décodeur de QR Code</h1>
+      <h1>Décodeur de code QR</h1>
       <form method="POST" action="cgi-bin/upload.py" id="passform" enctype="multipart/form-data">
         <div>
-          <label>Glissez le fichier .png,.gif,.jpg de votre Code QR</label>
+          <label>Glissez ici une image .jpg, .gif ou ..png d'un code QR</label>
           <input type="file" id="pass" name="pass" required accept=".jpg,.jpeg,.png,.gif">
         </div>
         <div>
