--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
       <h1>Décodeur de code QR</h1>
       <form method="POST" action="cgi-bin/decode.py" id="decode-form" enctype="multipart/form-data">
         <div>
-          <label for="img">Glissez ici une image .jpg, .gif ou ..png d'un code QR</label>
+          <label for="img">Glissez ici une image .jpg, .gif ou .png d'un code QR</label>
         </div>
         <div>
           <input type="file" id="img" name="img" required accept=".jpg,.jpeg,.png,.gif">
